--- a/carex/src/Components/Navbar/Navbar.css
+++ b/carex/src/Components/Navbar/Navbar.css
@@ -2,7 +2,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 5rem;
+    padding: 1rem 5rem 0 5rem;
 }
 .Logo{
     border: 3px solid #18BD54;
