--- a/carex/src/Components/OurServices/ServicesMobile/ServicesMobile.css
+++ b/carex/src/Components/OurServices/ServicesMobile/ServicesMobile.css
@@ -9,6 +9,9 @@
     flex-direction: column;
     justify-content: center;
 }
+.Mobile:hover{
+    transform: scale(1.1);
+}
 .Description-Box{
     display: flex;
     flex-direction: column;
